hphp/test/zend/good/Zend/tests/ns_086.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("mbstring")) {
  die("skip Requires mbstring extension");
}
}
