hphp/test/zend/bad/Zend/tests/declare_001.php.skipif
<?php
if (!extension_loaded("mbstring")) {
  die("skip Requires ext/mbstring");
}
?>